# poketcgevents-api

./: .env  .gitignore  Cargo.toml
migrations/: Cargo.toml
migrations/src/: lib.rs  m20241206_000001_create_initial_tables.rs
src/: connections.rs  error.rs  logging.rs  main.rs
src/api/: mod.rs  openapi.rs  router.rs
src/api/handlers/: debug.rs  events.rs  mod.rs
src/entities/: discord_users.rs  events.rs  google_users.rs  mod.rs  organizers.rs  prelude.rs  user_subscription_notifications.rs  user_subscriptions.rs  users.rs
src/persistence/: events_repository.rs  mod.rs  organizers_repository.rs
src/services/events/: crawler.rs  mod.rs  search_service.rs
