[package]
name = "poketcgevents-api"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["migrations"]

[workspace.dependencies]
migrations = { path = "migrations" }
tokio = { version = "1.41", features = ["full"] }
sea-orm-migration = { version = "2.0.0-rc.20", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }

[dependencies]
anyhow = "^1.0"
axum = "^0.8"
chrono = { version = "^0.4", features = ["serde"] }
csv = "1.3"
dotenvy = "^0.15"
itertools = "^0.14"
log = "^0.4"
rand = "^0.9"
sea-orm = { version = "2.0.0-rc", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "with-json",
    "with-chrono",
    "with-rust_decimal",
    "with-bigdecimal",
    "with-uuid",

    "macros",
] }
sea-orm-typed-id = { version = "^0.4", features = ["rustls", "postgres"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0", features = ["preserve_order"] }
thiserror = "^2.0"
tokio = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tzf-rs = { version = "1.1.3", default-features = false }
url = "2.5"
utoipa = { version = "^5.3", features = [
    "axum_extras",
    "chrono",
    "indexmap",
    "preserve_order",
    "uuid",
] }
utoipa-swagger-ui = { version = "^9.0", features = ["axum"] }
uuid = { version = "^1.18", features = ["serde", "v4"] }
